--- a/Hera/Hera.csproj
+++ b/Hera/Hera.csproj
@@ -34,10 +34,6 @@
       <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Hera.DomainModeling, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hera.DomainModeling.0.1.7\lib\Hera.DomainModeling.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -72,8 +68,10 @@
     <Compile Include="Persistence\Integrity\Policies\RevisionIntegrityPolicy.cs" />
     <Compile Include="Persistence\MissingParameterLessConstructorException.cs" />
     <Compile Include="Persistence\Snapshot\InMemorySnapshotStore.cs" />
+    <Compile Include="Persistence\Snapshot\ISnapshotManager.cs" />
     <Compile Include="Persistence\Snapshot\ISnapshotStore.cs" />
     <Compile Include="Persistence\Snapshot\Snapshot.cs" />
+    <Compile Include="Persistence\Snapshot\SnapshotManager.cs" />
     <Compile Include="Projection\Config\HeraProjection.cs" />
     <Compile Include="Projection\Config\HeraProjectionExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,7 +79,6 @@
     <Compile Include="Serialization\Config\HeraSerialization.cs" />
     <Compile Include="Serialization\Config\HeraSerializationExtentions.cs" />
     <Compile Include="Serialization\ISerialize.cs" />
-    <Compile Include="Serialization\JsonSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Diagnostics\Config\" />
@@ -89,6 +86,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Hera.DomainModeling\Hera.DomainModeling\Hera.DomainModeling.csproj">
+      <Project>{bf25f3d5-2222-442c-8c2a-7e67daa3acd2}</Project>
+      <Name>Hera.DomainModeling</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
